changed names to sveltekit_default_2

--- a/src/app.html
+++ b/src/app.html
@@ -9,9 +9,8 @@
 	</head>
 	<body>
 		<div>%svelte.body%</div>
-		Hi, hier ist Peter
 		<h1 class="text-3xl font-bold underline">
-			Hello wooooorld!
+			Hello world! Das ist sveltekit_default_2 von Peter Stadler
 		  </h1>
 	</body>
 </html>
