--- a/src/app.html
+++ b/src/app.html
@@ -9,8 +9,8 @@
 	</head>
 	<body>
 		<div>%svelte.body%</div>
-		<h1 class="text-3xl font-bold underline">
-			Hello world! Das ist sveltekit_default_2 von Peter Stadler
+		<h1 class="text-sm   bg-slate-300	border-t-2">
+			by Peter Stadler with SvelteKit and TailwindCSS
 		  </h1>
 	</body>
 </html>
