--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<body>
 		<div>%svelte.body%</div>
 		<h1 class="text-sm   bg-slate-300	border-t-2">
-			by Peter Stadler with SvelteKit and TailwindCSS
+			by Peter Stadler - made with SvelteKit and TailwindCSS
 		  </h1>
 	</body>
 </html>
